# libcoap

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS  BUILDING  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTE  COPYING  ChangeLog  Dockerfile  HOWTO.dual.gnutls  HOWTO.dual.openssl  HOWTO.dual.softhsm2  HOWTO.pkcs11  LICENSE  LICENSE.BSD  Makefile  Makefile.am  Makefile.contiki  Makefile.in  Makefile.libcoap  README.md  SECURITY.md  TODO  address.h  async.c  async.h  autogen.sh  bits.h  block.c  block.h  cmake-format.yaml  cmake_coap_config.h.in  cmake_coap_defines.h.in  coap-observer.c  coap-server.c  coap.h  coap_config.h.contiki  (+60 more)
build-env/: Dockerfile.build-env  Dockerfile.develop
cmake/: FindMbedTLS.cmake  FindTinyDTLS.cmake  FindwolfSSL.cmake
doc/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  build_man_files.sh  build_man_files.sh.in  docbook.local.css  main.md  module_api_wrap.h  upgrade_4.2.1_4.3.0.txt  upgrade_4.3.1_4.3.2.txt  upgrade_4.3.2_4.3.3.txt  upgrade_4.3.3_4.3.4.txt  upgrade_4.3.4_4.3.5.txt
examples/: Makefile  Makefile.am  Makefile.in  Makefile.in.old  README.etsi_iot  client.c  coap-client.c  coap-client.txt.in  coap-rd.c  coap-rd.txt.in  coap-server.c  coap-server.txt.in  coap_append.c  coap_append.h  coap_list.c  coap_list.h  etsi_coaptest.sh  etsi_iot_01.c  etsi_testcases.sh  getopt.c  oscore-interop-server.c  oscore_testcases.sh  rd.c  server.c  share.libcoap.examples.Makefile  share.libcoap.examples.README  tiny.c
examples/contiki/: .gitignore  Makefile  Makefile.common  Makefile.contiki  README  coap-observer.c  project-conf.h  server.c
examples/interop/: a_client.conf  b_server.conf  c_client.conf  d_server.conf  e_client.conf  f_client.conf  g_client.conf
examples/lwip/: .gitignore  Makefile  README  client-coap.c  client-coap.h  client.c  config.h  lwipopts.h  server-coap.c  server-coap.h  server.c  tinydtls
examples/lwip/config/: coap_config.h  coap_config.h.in  lwipopts.h  lwippools.h
examples/lwip/src/: libcoap_tapif.c
examples/riot/: .gitignore  Makefile  README
examples/riot/examples_libcoap_client/: Kconfig  README.md  app.config  client-coap.c  client-coap.h  main.c
examples/riot/examples_libcoap_server/: Kconfig  app.config  main.c  server-coap.c  server-coap.h
examples/riot/pkg_libcoap/: Kconfig  Makefile  Makefile.dep  Makefile.libcoap
examples/riot/tests_pkg_libcoap/: libcoap-test.c  libcoap-test.h
examples/zephyr/: .gitignore  Makefile  README
examples/zephyr/client-src/: CMakeLists.txt  Kconfig  prj.conf
examples/zephyr/client-src/src/: main.c
include/: Makefile.am
include/coap/: address.h  async.h  bits.h  block.h  coap.h  coap.h.in  coap.h.windows  coap_context.h  coap_dtls.h  coap_event.h  coap_hashkey.h  coap_io.h  coap_keystore.h  coap_list.h  coap_session.h  coap_time.h  coap_timer.h  debug.h  ecdsa.h  encode.h  hashkey.h  libcoap.h  lwippools.h  mem.h  net.h  option.h  pdu.h  prng.h  resource.h  run.h  session.h  str.h  subscribe.h  t_list.h  uri.h  uthash.h  utlist.h
include/coap2/: address.h  async.h  block.h  cmake_coap_config.h.in  coap.h.in  coap.h.windows  coap_asn1_internal.h  coap_async_internal.h  coap_block_internal.h  coap_cache.h  coap_cache_internal.h  coap_config.h.in  coap_debug.h  coap_dtls.h  coap_dtls_internal.h  coap_event.h  coap_forward_decls.h  coap_hashkey.h  coap_internal.h  coap_io.h  coap_io_internal.h  coap_mutex.h  coap_net_internal.h  coap_pdu_internal.h  coap_prng.h  coap_riot.h  coap_session.h  coap_session_internal.h  coap_subscribe_internal.h  coap_tcp.h  coap_tcp_internal.h  coap_time.h  debug.h  encode.h  libcoap.h  lwippools.h  mem.h  net.h  option.h  pdu.h  (+5 more)
include/coap3/: async.h  block.h  coap.h  coap.h.in  coap.h.riot  coap.h.riot.in  coap.h.windows  coap.h.windows.in  coap_address.h  coap_asn1_internal.h  coap_async.h  coap_async_internal.h  coap_block.h  coap_block_internal.h  coap_cache.h  coap_cache_internal.h  coap_crypto_internal.h  coap_debug.h  coap_debug_internal.h  coap_debug_macros.h  coap_dtls.h  coap_dtls_internal.h  coap_encode.h  coap_event.h  coap_forward_decls.h  coap_hashkey.h  coap_hashkey_internal.h  coap_include_contiki.h  coap_include_contiki_internal.h  coap_include_lwip.h  coap_include_lwip_internal.h  coap_include_posix.h  coap_include_posix_internal.h  coap_include_riot.h  coap_include_riot_internal.h  coap_include_windows.h  coap_include_windows_internal.h  coap_internal.h  coap_io.h  coap_io_internal.h  (+46 more)
include/oscore/: oscore.h  oscore_cbor.h  oscore_context.h  oscore_cose.h  oscore_crypto.h
m4/: ac_check_cryptolibs.m4  ax_check_a2x_to_man.m4
man/: Makefile.am  coap-client.txt.in  coap-oscore-conf.txt.in  coap-rd.txt.in  coap-server.txt.in  coap-tls-engine-conf.txt.in  coap.txt.in  coap_address.txt.in  coap_async.txt.in  coap_attribute.txt.in  coap_block.txt.in  coap_cache.txt.in  coap_context.txt.in  coap_deprecated.txt.in  coap_encryption.txt.in  coap_endpoint_client.txt.in  coap_endpoint_server.txt.in  coap_handler.txt.in  coap_init.txt.in  coap_io.txt.in  coap_keepalive.txt.in  coap_locking.txt.in  coap_logging.txt.in  coap_lwip.txt.in  coap_observe.txt.in  coap_oscore.txt.in  coap_pdu_access.txt.in  coap_pdu_setup.txt.in  coap_persist.txt.in  coap_proxy.txt.in  coap_recovery.txt.in  coap_resource.txt.in  coap_session.txt.in  coap_string.txt.in  coap_supported.txt.in  coap_tls_library.txt.in  coap_uri.txt.in  coap_websockets.txt.in  examples-code-check.c
scripts/: api-version-bump.sh  build.sh  check-missing-updates.sh  check_examples.sh  dist.sh  fix-cunit.sh  fix_version.sh.in  github_dist.sh  mingw-cmake.sh  msbuild.sln.cmd  msinstallopenssl.cmd
src/: address.c  async.c  block.c  coap_address.c  coap_asn1.c  coap_async.c  coap_block.c  coap_cache.c  coap_context.c  coap_debug.c  coap_dtls.c  coap_dtls_gnutls.c  coap_encode.c  coap_event.c  coap_gnutls.c  coap_hashkey.c  coap_io.c  coap_io_contiki.c  coap_io_lwip.c  coap_io_riot.c  coap_keystore.c  coap_layers.c  coap_mem.c  (+34 more)
zephyr/: CMakeLists.txt  Kconfig  config-mbedtls-libcoap.h  libcoap-mbedtls.conf  libcoap.conf  module.yml
(+93 files in other folders)
